# unison2d

./: .gitignore  CLAUDE.md  Cargo.toml  Package.swift  README.md
crates/unison-android/: Cargo.toml
crates/unison-android/UnisonAndroid/: build.gradle.kts
crates/unison-android/UnisonAndroid/src/main/: AndroidManifest.xml
crates/unison-android/UnisonAndroid/src/main/java/com/unison2d/: GameActivity.kt  GameSurfaceView.kt  JoystickView.kt  UnisonNative.kt
crates/unison-android/src/: export_macro.rs  game_loop.rs  input.rs  lib.rs  renderer.rs  shaders.rs
crates/unison-assets/: Cargo.toml
crates/unison-audio/: Cargo.toml
crates/unison-audio/src/: backend.rs  id.rs  kira_backend.rs  lib.rs  params.rs  stub_backend.rs  system.rs
crates/unison-cli/: Cargo.toml  README.md
crates/unison-cli/src/: cli.rs  config.rs  lib.rs  main.rs  render.rs  templates.rs  toolchain.rs
crates/unison-cli/src/commands/: build.rs  clean.rs  dev.rs  doctor.rs  link.rs  mod.rs  new.rs  platform.rs  test.rs
crates/unison-cli/templates/common/: Cargo.toml  README.md  build.rs
crates/unison-cli/templates/common/_cargo/: config.toml
crates/unison-cli/templates/common/project/: lib.rs
crates/unison-cli/templates/platform-android/: build-rust.sh  build.gradle.kts  gradlew  settings.gradle.kts
crates/unison-cli/templates/platform-android/app/: build.gradle.kts
crates/unison-cli/templates/platform-android/app/src/main/: AndroidManifest.xml
crates/unison-cli/templates/platform-android/app/src/main/java/KOTLIN_PACKAGE_PATH/: MainActivity.kt
crates/unison-cli/templates/platform-ios/: Info.plist
crates/unison-cli/templates/platform-ios/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
crates/unison-cli/templates/platform-ios/PROJECT_NAME-ios.xcodeproj/: project.pbxproj
crates/unison-cli/templates/platform-web/: Trunk.toml  index.html
crates/unison-cli/templates/scripting-lua/project/assets/scripts/: main.lua
crates/unison-cli/templates/scripting-ts/: .gitignore-ts-addon  package.json
crates/unison-cli/templates/scripting-ts/project/scripts-src/: main.ts  tsconfig.json
crates/unison-cli/tests/: build_all.rs  build_android.rs  build_ios.rs  build_web.rs  clean.rs  cli_test_cmd.rs  dev.rs  e2e_ts.rs  e2e_web.rs  link_unlink.rs  new_smoke.rs  new_snapshots.rs  platform.rs
crates/unison-cli/tests/snapshots/: new_snapshots__lua-all-cargo.snap  new_snapshots__lua-all-tree.snap  new_snapshots__lua-web-only-cargo.snap  new_snapshots__lua-web-only-tree.snap  new_snapshots__lua-web-only-unison-toml.snap  new_snapshots__ts-all-tree.snap  new_snapshots__ts-web-tree.snap
crates/unison-core/: Cargo.toml
crates/unison-input/: Cargo.toml
crates/unison-ios/: Cargo.toml
crates/unison-ios/UnisoniOS/: Package.swift
crates/unison-ios/UnisoniOS/Sources/UnisonGameFFI/: shim.c
crates/unison-ios/UnisoniOS/Sources/UnisonGameFFI/include/: UnisonGameFFI.h
crates/unison-ios/UnisoniOS/Sources/UnisoniOS/: GameViewController.swift  JoystickView.swift  Renderer.swift
crates/unison-ios/src/: export_macro.rs  game_loop.rs  input.rs  lib.rs  renderer.rs  shaders.rs
crates/unison-lighting/: Cargo.toml
crates/unison-lighting/src/: config.rs  gradient.rs  lib.rs  light.rs  manager.rs  occluder.rs  render.rs  shadow.rs  system.rs
crates/unison-log/: Cargo.toml
crates/unison-log/src/: filter.rs  lib.rs  sink_android.rs  sink_stderr.rs  sink_web.rs
crates/unison-log/tests/: filter.rs  init.rs
crates/unison-lua/: Cargo.toml  NOTICE  README.md
crates/unison-lua/lua-5.4.7/: ldo.c
crates/unison-lua/src/: lib.rs
crates/unison-lua/wasm-sysroot/include/: ctype.h  limits.h  math.h  signal.h  string.h  time.h
crates/unison-math/: Cargo.toml
crates/unison-physics/: Cargo.toml
crates/unison-physics/src/: compute.rs  forensics.rs  lib.rs  math.rs  mesh.rs  rigid.rs  trace.rs  world.rs  xpbd.rs
crates/unison-physics/tests/: shape_integrity.rs
crates/unison-profiler/: Cargo.toml
crates/unison-render/: Cargo.toml
crates/unison-scripting/: Cargo.toml
crates/unison-scripting/src/: bridge.rs  entry_macro.rs  error_overlay.rs  hot_reload.rs  lib.rs  wasm_libc.rs
crates/unison-scripting/src/bindings/: action_map.rs  assets.rs  audio.rs  camera.rs  collisions.rs  debug.rs  engine.rs  engine_state.rs  events.rs  input.rs  lighting.rs  math.rs  mod.rs  objects.rs  render_layers.rs  render_targets.rs  renderer.rs  scene.rs  ui.rs  unison_root.rs  world.rs
crates/unison-scripting/tests/: action_map.rs  types_drift.rs
crates/unison-scripting/types/: audio.d.ts  color.d.ts  debug.d.ts  engine.d.ts  events.d.ts  game.d.ts  index.d.ts  input.d.ts  lua.d.ts  math-extensions.d.ts  package.json  rng.d.ts  scene.d.ts  ui.d.ts  unison.d.ts  world.d.ts
crates/unison-tests/: Cargo.toml
crates/unison-tests/src/: lib.rs
crates/unison-tests/tests/: audio_kira.rs  audio_lua.rs  cli_templates.rs  engine_world.rs  event_bus.rs  input_axis.rs  lighting.rs  physics_world.rs  physics_xpbd.rs  pixel_lighting.rs  platform_rendering.rs  render_targets.rs  samples.rs  scripting_core_api.rs  scripting_dx.rs  scripting_foundation.rs  scripting_full_api.rs  ui_button_click.rs  ui_lifecycle.rs
crates/unison-ui/: Cargo.toml
crates/unison-ui/src/: animation.rs  diff.rs  facade.rs  input.rs  layout.rs  lib.rs  nine_slice.rs  node.rs  render.rs  state.rs  style.rs  ui_macro.rs
crates/unison-ui/src/text/: atlas.rs  font.rs  mod.rs
crates/unison-web/: Cargo.toml
crates/unison-web/src/: game_loop.rs  input.rs  lib.rs  renderer.rs  shaders.rs
crates/unison2d/: Cargo.toml
crates/unison2d/src/: camera_system.rs  ctx.rs  engine.rs  event_bus.rs  game.rs  level.rs  lib.rs  object.rs  object_system.rs  prefab.rs  world.rs
docs/: API.md  INDEX.md  engine.md  lighting.md  math.md  physics.md  render.md  web.md
docs/api/: android.md  assets.md  audio.md  engine.md  input.md  ios.md  lighting.md  math.md  physics.md  profiler.md  render.md  scripting.md  ui.md  web.md
docs/guide/: README.md  getting-started.md  levels.md  patterns.md  prefabs.md  (+1 more)
samples/: README.md
types/: unison2d.d.ts
(+43 files in other folders)
