[workspace]
resolver = "2"
members = [
    "crates/unison2d",
    "crates/unison-math",
    "crates/unison-physics",
    "crates/unison-render",
    "crates/unison-lighting",
    "crates/unison-profiler",
    "crates/unison-input",
    "crates/unison-web",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/David-Parker/unison2d"

[workspace.dependencies]
# Internal crates
unison2d = { path = "crates/unison2d" }
unison-math = { path = "crates/unison-math" }
unison-physics = { path = "crates/unison-physics" }
unison-render = { path = "crates/unison-render" }
unison-lighting = { path = "crates/unison-lighting" }
unison-profiler = { path = "crates/unison-profiler", default-features = false }
unison-input = { path = "crates/unison-input" }
unison-web = { path = "crates/unison-web" }

# External dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.8"

# Web platform dependencies
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "WebGlBuffer",
    "WebGlUniformLocation",
    "WebGlTexture",
    "WebGlVertexArrayObject",
    "WebGlFramebuffer",
    "Performance",
    "KeyboardEvent",
    "MouseEvent",
    "TouchEvent",
    "Touch",
    "TouchList",
    "EventTarget",
    "console",
] }
