[package]
name = "unison-audio"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Unison 2D Game Engine - Audio subsystem"

[dependencies]
unison-core = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
# Backend + codec features added in Task 4 (kira backend).
