[package]
name = "unison-audio"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Unison 2D Game Engine - Audio subsystem"

[dependencies]
unison-core = { workspace = true }
thiserror = { workspace = true }
kira = { version = "0.12", default-features = false, features = ["cpal", "symphonia"], optional = true }

[features]
default = ["backend-kira", "codec-ogg", "codec-wav"]
backend-kira = ["dep:kira"]
# Exposes in-crate test helpers (e.g. `AudioSystem::backend_for_test`) to
# external crates' integration tests.
test-helpers = []
codec-ogg  = ["kira?/ogg", "kira?/vorbis"]
codec-wav  = ["kira?/wav", "kira?/pcm"]
codec-mp3  = ["kira?/mp3"]
codec-flac = ["kira?/flac"]
