[package]
name = "unison-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "One-stop CLI for creating, building, and running Unison 2D game projects"

[[bin]]
name = "unison"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
toml_edit = "0.22"

[dev-dependencies]
insta = { version = "1", features = ["filters"] }
tempfile = "3"
