[package]
name = "unison-lighting"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Unison 2D Game Engine - Dynamic lighting and shadows"

[dependencies]
serde.workspace = true
unison-math = { path = "../unison-math" }
unison-profiler = { path = "../unison-profiler", default-features = false }

[features]
default = []
profiling = ["unison-profiler/enabled"]
