[package]
name = "unison-scripting"
description = "Lua scripting support for Unison 2D — ScriptedGame implementing the Game trait"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
unison2d = { workspace = true }
mlua = { version = "0.10", features = ["lua54", "vendored"] }

[features]
default = []
