[package]
name = "unison-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
unison-physics = { path = "../unison-physics" }
unison2d = { path = "../unison2d" }
unison-core = { path = "../unison-core" }
unison-render = { path = "../unison-render" }
unison-lighting = { path = "../unison-lighting" }
unison-input = { path = "../unison-input" }
unison-ui = { path = "../unison-ui" }
unison-scripting = { path = "../unison-scripting" }
mlua = { version = "0.10", features = ["lua54", "vendored"] }
