[package]
name = "unison2d"
description = "Unison 2D game engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
unison-math = { workspace = true }
unison-physics = { workspace = true }
unison-render = { workspace = true }
unison-lighting = { workspace = true }
unison-profiler = { workspace = true }
unison-input = { workspace = true }
