[package]
name = "unison2d"
description = "Unison 2D game engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
unison-core = { workspace = true }
unison-physics = { workspace = true }
unison-render = { workspace = true }
unison-lighting = { workspace = true }

unison-profiler = { workspace = true }
unison-input = { workspace = true }
unison-assets = { workspace = true }
unison-ui = { workspace = true }
unison-audio = { workspace = true }

[features]
default = ["backend-kira"]
backend-kira = ["unison-audio/backend-kira"]
simd = ["unison-physics/simd"]
profiling = ["unison-profiler/enabled", "unison-physics/profiling", "unison-lighting/profiling"]
