[package]
name = "{{CRATE_NAME}}"
version = "0.1.0"
edition = "2021"
description = "A Unison 2D game"

[lib]
path = "project/lib.rs"
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
unison-scripting = { git = "{{ENGINE_GIT_URL}}", tag = "{{ENGINE_TAG}}", features = ["simd"] }
wasm-bindgen = { version = "0.2", optional = true }

[build-dependencies]
unison-assets = { git = "{{ENGINE_GIT_URL}}", tag = "{{ENGINE_TAG}}", features = ["build"] }

[features]
default = ["web"]
web       = ["unison-scripting/web", "dep:wasm-bindgen"]
ios       = ["unison-scripting/ios"]
android   = ["unison-scripting/android"]
profiling = ["unison-scripting/profiling"]

[patch.crates-io]
lua-src = { git = "{{ENGINE_GIT_URL}}", tag = "{{ENGINE_TAG}}" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
